syntax = "proto3";

package worldmonitor.market.v1;

import "sebuf/http/annotations.proto";
import "worldmonitor/market/v1/market_quote.proto";

// ListCryptoQuotesRequest specifies which cryptocurrencies to retrieve.
message ListCryptoQuotesRequest {
  // Cryptocurrency IDs to retrieve (CoinGecko IDs). Empty returns defaults.
  repeated string ids = 1 [(sebuf.http.query) = { name: "ids" }];
}

// ListCryptoQuotesResponse contains cryptocurrency quotes.
message ListCryptoQuotesResponse {
  // The list of cryptocurrency quotes.
  repeated CryptoQuote quotes = 1;
}
